--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,1 +1,6 @@
- <li class='footer'><a href='/logout'>logout</a></li>
+<li class='footer'>
+<a href='/home'>home</a> - <a href='/get_widget'>get widget</a>
+</li>
+<li class='footer'>
+<a href='/account'>account</a> - <a href='/logout'>logout</a>
+</li>
