--- a/views/get_widget.erb
+++ b/views/get_widget.erb
@@ -21,38 +21,26 @@ projection">
 </head>
 
 <body>
-<div class="iphone-scrollcontainer">
-   <ul class="iphone-scroll">
-      <li>
-        <div class="nav-indicator-fixed"></div>
-        <div class="nav-indicator">
-        Fitbit Mini Viewer
-        </div>
-	
-	<li>
+<% unless account_complete?(@account) %>
 To use this service, your fitbit email and password are required.
-(to get your data from the fitbit API)
-	</li>
-	<li>
+(to get your data from the fitbit API)<br/>
     <form action='/account/edit' method='post'>
-    Email:
-	<input type='text' name='email' placeholder='<%= @account.fitbit_email %>' />
-	</li>
-	<li>
-    Password:
-	<input type='password' name='password' placeholder='<%= @account.fitbit_pass.gsub(/./,'*') %>' />
-	</li>
-	<li>
+    Email: <input type='text' name='email' /><br/>
+    Password: <input type='password' name='password' /><br/>
     <input type='submit' name='save' value='save' />
     </form>
-	  </li>
-	  
-	  <!--
-or, I don't want a widget I came to get a backup of my fitbit data.
-<a href="/backup">Backup JSON Now!</a>
-<br/>
-<a href="/backup_simple">Backup HTML Now!</a>
- -->
+<% end %>
+    <br/>
+    Once your user and password are added you should be able to embed a widget with the code below.<br/>
+    <textarea cols='50' rows='5'><iframe height="320px"
+    frameborder="1" width="200px" scrolling="no" src="http://<%=
+    "#{request.env['HTTP_HOST']}/widget/#{@account.token}" %>" name="fitbit"></iframe></textarea>
+    <br/><br/>
+    Preview:<br/>
+    <iframe height="320px" frameborder="1" width="200px"
+    scrolling="no" src="/widget/#{account.token}"
+    name="fitbit"></iframe>
+
 <%=erb :footer %>
 
 </body>
