--- a/views/index.erb
+++ b/views/index.erb
@@ -22,13 +22,13 @@
   </ul>
 
   <li>
-  Example widget:<br/>
-  <iframe height="350px" frameborder="0" width="210px" scrolling="no" src="/widget/example" name="fitbit"></iframe>
+  Example widget/mobile view:<br/>
+  <iframe height="350px" frameborder="0" width="100%" scrolling="no" src="/widget/example" name="fitbit"></iframe>
   <br/>
   </li>
 
   <li>
-  This is an opensource project, get the code.
+  <a href="http://github.com/danmayer/fitbit-widget">Fitbit mini is open source</a>
   <br/>
   </li> 
   <li class='footer'>
