--- a/views/account.erb
+++ b/views/account.erb
@@ -40,7 +40,8 @@ To use this service, your fitbit email and password are required.
 	</li>
 	<li>
     Password:
-	<input type='password' name='password' placeholder='<%= @account.fitbit_pass.gsub(/./,'*') %>' />
+	<input type='password' name='password' placeholder='<%=
+	@account.fitbit_pass.gsub(/./,'*') if @account.fitbit_pass %>' />
 	</li>
 	<li>
     <input type='submit' name='save' value='save' />
