--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,7 @@
 <head>
 <link rel='stylesheet' href='/base.css' type='text/css' media="screen, projection"> 
 <meta name = "viewport" content = "width = device-width">
+<link rel=”apple-touch-icon” href=”/apple-touch-icon.png”>
 </head>
 <body>
 <div class="iphone-scrollcontainer">
