--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,6 +2,7 @@
 <head>
 <script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/jquery.sparkline.min.js"></script>
+
     <script type="text/javascript">
     $(function() {
         /** This code runs when everything has been loaded on the page */
@@ -13,20 +14,15 @@
         $('.inlinebar').sparkline('html', {type: 'bar', barColor: '#81F7F3'} );
     });
     </script>
-<link rel='stylesheet' href='/base.css' type='text/css' media="screen,
-        projection">
+
+<link rel='stylesheet' href='/base.css' type='text/css' media="screen,projection">
 <meta name = "viewport" content = "width = device-width">
+<link rel="apple-touch-icon" href="/icon.png">
 </head>
+
 <body>
-<div class="iphone-scrollcontainer">
-   <ul class="iphone-scroll">
 
-   <%=erb :view_data, :layout => false %>
+<%= yield %>
 
-<li class='footer'>Powered by <a href="http://fitbit.com"
-target="_parent">Fitbit</a></li>
-
-</ul>
-</div>
 </body>
 </html>
