--- a/views/index.erb
+++ b/views/index.erb
@@ -1,10 +1,3 @@
-<html>
-<head>
-<link rel='stylesheet' href='/base.css' type='text/css' media="screen, projection"> 
-<meta name = "viewport" content = "width = device-width">
-<link rel="apple-touch-icon" href="/icon.png">
-</head>
-<body>
 <div class="iphone-scrollcontainer">
    <ul class="iphone-scroll">
       <li>
@@ -16,7 +9,7 @@
         <li class="nohover">
           <a href="/">Fitbit mini</a> is a simple way to view fitbit data. Embed it in a blog, or for mobile friendly viewing. Fitbit mini, isn't assocaited with <a href="http://fitbit.com">Fitbit</a> in any way, just a fan.
         </li> 
-  <li><a href="/account">Create Account or Login</a></li>
+  <li><a href="/account" onClick="return accountGet();">Create Account or Login</a></li>
   <% if session["id"]!=nil %>
   <li><a href='/logout'>logout</a></li>
   <% end %>
@@ -26,17 +19,15 @@
   Example widget/mobile view:<br/>
   <iframe height="350px" frameborder="0" width="100%" scrolling="no" src="/widget/example" name="fitbit"></iframe>
   <br/>
+  <br/>
   </li>
 
   <li>
   <a href="http://github.com/danmayer/fitbit-widget">Fitbit mini is open source</a>
   <br/>
-  </li> 
-  <li class='footer'>
-  Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
   </li>
+
+  <%=erb :footer, :layout => false %>
 
  </ul>
 </div>
-</body>
-</html>
