--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,7 +6,12 @@
 <script type="text/javascript" charset="utf-8" src="/json.js"></script>
 
     <script type="text/javascript">
-    $(function() {
+    function init(){
+      //add this in your javascript code to 'hide' the address bar  
+      window.scrollTo(0, 1);
+    }
+
+    var sparklines = function() {
         /** This code runs when everything has been loaded on the page */
         /* Inline sparklines take their values from the contents of the tag */
         $('.inlinesparkline').sparkline(); 
@@ -14,11 +19,6 @@
         /* Use 'html' instead of an array of values to pass options 
         to a sparkline with data in the tag */
         $('.inlinebar').sparkline('html', {type: 'bar', barColor: '#81F7F3'} );
-    });
-
-    function init(){
-      //add this in your javascript code to 'hide' the address bar  
-      window.scrollTo(0, 1);
     }
 
     var hideLoading = function() {
@@ -38,18 +38,19 @@
     $.retrieveGet(url, function(json, status) {
       var content = json;
       $("#content").empty().append(content);
+      sparklines();
       hideLoading();
     });
     return false;
     };
 
-
     jQuery(document).ready(function($) {
+    sparklines();
     // Since jQuery.retrieveJSON delegates to jQuery's Ajax
     // to make requests, we can just set up normal jQuery
     // Ajax listeners.
-    $("#loading").ajaxStart(function() { $(this).show(); });
-    $("#loading").ajaxStop(function() {  $(this).hide(); });
+    //$("#loading").ajaxStart(function() { $(this).show(); });
+    //$("#loading").ajaxStop(function() {  $(this).hide(); });
 
 
   // Immediately try to retrieve the data. If the cached
