--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-<script type="text/javascript" charset="utf-8" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript" charset="utf-8" src="/jquery-1.4.2.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/jquery.sparkline.min.js"></script>
 <script type="text/javascript" charset="utf-8" src="/jquery.offline.js"></script>
 <script type="text/javascript" charset="utf-8" src="/json.js"></script>
