improve loading feel on mobile

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,10 +36,13 @@
 
     var getHome = function(url) {
     $.retrieveGet(url, function(json, status) {
+      $("#loading").show();
+      $("#content").empty().hide();
       var content = json;
-      $("#content").empty().append(content);
+      $("#content").append(content);
       sparklines();
       hideLoading();
+      $("#content").show();
     });
     return false;
     };
