--- a/views/footer.erb
+++ b/views/footer.erb
@@ -1,12 +1,17 @@
+<!-- needs to check if account valid not just session id --!>
 <li class='footer'>
-<a href='<% session["id"] ? '/home' : '/' %>'>home</a>
 <% if session["id"] %> 
-- <a href='/get_widget'>get widget</a>
+<a href="/home" onclick="return getHome('/home')">home</a>
+<% else %>
+<a href="/" onclick="return getHome('/')">home</a>
+<% end %>
+<% if session["id"] %> 
+- <a href='/get_widget' onclick="return widgetGet();">get widget</a>
 <% end %>
 </li>
 <% if session["id"] %>
 <li class='footer'>
-<a href='/account'>account</a> - <a href='/logout'>logout</a>
+<a href='/account' onclick="return accountGet();">account</a> - <a href='/logout' onclick="return logoutGet();">logout</a>
 </li>
 <% end %>
 <li class='footer'>
