a little cleanup to make this more easily work with the Android code

--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -20,5 +20,5 @@ Password:
 <li>
 <br/>
 Or login with the options below <br/>
-<iframe src="<%= open_id_auth_uri %>" scrolling="no" frameBorder="no"allowtransparency="true" style="width:400px;height:240px"></iframe>
+<iframe src="<%="#{open_id_auth_uri}" %>" scrolling="no" frameBorder="no"allowtransparency="true" style="width:400px;height:240px"></iframe>
 </li>
