--- a/views/index.erb
+++ b/views/index.erb
@@ -7,7 +7,7 @@
 
   <li>
   Example widget/mobile view:<br/>
-  <iframe height="350px" frameborder="1" width="90%" scrolling="no" src="/widget/example" name="fitbit"></iframe>
+  <iframe height="350px" frameborder="1" width="90%" scrolling="no" src="<%=get_url('/widget/example') %>" name="fitbit"></iframe>
   <br/>
   <br/>
   </li>
