--- a/views/index.erb
+++ b/views/index.erb
@@ -1,16 +1,18 @@
   <ul>
   <li class="nohover">
-          <a href="/">Fitbit mini</a> is a simple way to view fitbit data. Embed it in a blog, or for mobile friendly viewing. Fitbit mini, isn't assocaited with <a href="http://fitbit.com">Fitbit</a> in any way, just a fan.
+          <a href="<%= get_url('/') %>">Fitbit mini</a> is a simple way to view fitbit data. Embed it in a blog, or for mobile friendly viewing. Fitbit mini, isn't assocaited with <a href="http://fitbit.com">Fitbit</a> in any way, just a fan.
         </li> 
   <li><a href="/account" onClick="return accountGet();">Create Account or Login</a></li>
   </ul>
 
+<% unless @hide_example %>
   <li>
   Example widget/mobile view:<br/>
-  <iframe height="350px" frameborder="1" width="90%" scrolling="no" src="<%=get_url('/widget/example') %>" name="fitbit"></iframe>
+  <iframe height="350px" frameborder="1" width="90%" scrolling="no" src="<%="http://#{request.env['HTTP_HOST']}/widget/example" %>" name="fitbit"></iframe>
   <br/>
   <br/>
   </li>
+<% end %>
 
   <li>
   <a href="http://github.com/danmayer/fitbit-widget">Fitbit mini is open source</a>
