don't display RPX login if they don't support RPX.

--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -17,8 +17,10 @@ Password:
 </li>
 </form>
 
+<% if ENV['rpx_key'] %>
 <li>
 <br/>
 Or login with the options below <br/>
 <iframe src="<%="#{open_id_auth_uri}" %>" scrolling="no" frameBorder="no"allowtransparency="true" style="width:400px;height:240px"></iframe>
 </li>
+<% end %>
