--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,6 +16,9 @@ get_local_resource('/fitbit-mini.js') %>"></script>
 get_local_resource('/jquery.cookie.js') %>"></script>
 <script type="text/javascript" charset="utf-8" src="<%=
 get_local_resource('/fitbit-app.js') %>"></script>
+<script type="text/javascript" charset="utf-8" src="<%=
+get_local_resource('/phonegap.js') %>"></script>
+<!-- -->
 <% else %>
 <script type="text/javascript" charset="utf-8" src="<%=
 get_local_resource('/fitbit-web.js') %>"></script>
