--- a/views/account.erb
+++ b/views/account.erb
@@ -1,6 +1,7 @@
 	<li>
           To use this service, your fitbit email and password are required.
           (to get your data from the fitbit API)
+        <span class="error-msg"><%= @error_msg %></span>
 	</li>
 	<li>
     <form action='/account/edit' method='post'>
