--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -2,6 +2,7 @@
 <li>
 Log in with Fitbit user/pass.<br/>
 (Fitbit account needed to get your data from the Fitbit API)
+<span class="error-msg"><%= @error_msg %></span>
 </li>
 <form action='/account/login' method='post' id='loginForm'>
 <li>
