--- a/views/footer.erb
+++ b/views/footer.erb
@@ -15,5 +15,8 @@
 </li>
 <% end %>
 <li class='footer'>
+Note due to a <a href="http://code.google.com/p/android/issues/detail?id=5001">Android SSL bug</a>, currently not runnig on SSL
+</li>
+<li class='footer'>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
 </li>
