it might have been RPX

--- a/views/footer.erb
+++ b/views/footer.erb
@@ -15,7 +15,7 @@
 </li>
 <% end %>
 <li class='footer'>
-Note due to a <a href="http://code.google.com/p/android/issues/detail?id=5001">Android SSL bug</a>, currently not runnig on SSL
+Due to a <a href="http://code.google.com/p/android/issues/detail?id=5001">Android SSL bug</a>, currently not on SSL
 </li>
 <li class='footer'>
 Data Powered by <a href="http://fitbit.com" target="_parent">Fitbit</a>
