--- a/views/account_login.erb
+++ b/views/account_login.erb
@@ -18,7 +18,7 @@ Password:
 </li>
 </form>
 
-<% if ENV['rpx_key'] && params['app'].nil? %>
+<% if ENV['rpx_key'] && params['app'].nil? && false %>
 <li>
 <br/>
 Or login with the options below <br/>
