--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,7 @@
   <li><a href="/account" onClick="return accountGet();">Create Account or Login</a></li>
   </ul>
 
-<% unless @hide_example %>
+<% unless @hide_example || params['app'] %>
   <li>
   Example widget/mobile view:<br/>
   <iframe height="350px" frameborder="1" width="90%" scrolling="no" src="<%="#{CALLBACK_URI_PREFIX}#{request.env['HTTP_HOST']}/widget/example" %>" name="fitbit"></iframe>
