--- a/views/layout.erb
+++ b/views/layout.erb
@@ -51,5 +51,17 @@ get_local_resource('/fitbit-web.js') %>"></script>
 </div>
 </div>
 
+<% if is_app? %> 
+ <div id="menu" style="display:none;">
+   Fitbit Mini not associated with Fitbit, created by a fan,Dan
+ Mayer.
+   <hr/>
+   <a href="#" onClick="return menu();">Close Menu</a>
+   <br/>
+   <a href="#" onClick="menu(); BackButton.exitApp(); return
+ false;">Close App</a>
+ </div>
+<% end %>
+
 </body>
 </html>
