--- a/phonegap-android/assets/www/base.css
+++ b/phonegap-android/assets/www/base.css
@@ -1,3 +1,8 @@
+/*disable the stupid android tap highlight*/
+* {
+	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);	
+}
+
 html, body {
               font: 12px/15px sans-serif;
               background: #fff;
